Improve filters and ErrorResponse